# CxxTemplate

./: CMakeLists.txt  Makefile  README.md  conanfile.py  vcpkg.json
app/: CMakeLists.txt  main.cc
cmake/: LTO.cmake  Sanitizers.cmake  Warnings.cmake
docs/html/: CMakeLists_8txt.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
docs/html/search/: all_0.js  all_4.js  functions_0.js  functions_2.js
src/: CMakeLists.txt  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
